fix blurry svg's (hopefully)

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,10 @@ main {
   padding-bottom: 0;
 }
 
+* {
+  shape-rendering: crispEdges;
+}
+
 .bg-gradient {
   background: rgb(0, 67, 255);
   background: linear-gradient(
@@ -126,6 +130,6 @@ img {
 .border-rebin {
   border-style: solid;
   border-width: 1px;
-  border-color: #DEE5EC;
+  border-color: #dee5ec;
   outline-color: #0043ff;
 }
